...
                ProfileView(contentSelectedTab: $selectedTab) // Pass the binding variable
                    .environmentObject(userSettings) // 確保傳遞 userSettings
                    .environmentObject(appState) // 傳遞 appState
                    .environmentObject(consumableStore)
            }
            .tabItem {
                Image(systemName: "person.fill")
            }
            .tag(4) // Assign a tag for ProfileView tab
            .accessibilityLabel("ProfileTab")
        }
        .onChange(of: selectedTab) { oldValue, newValue in
            // 當 TabView tag 改變時，根據 tag 切換狀態機
...
