...
                    }
                }
                
                print("立即獲取 clicked")
                // 在這裡添加購買邏輯
            }) {
                Text("立即獲取")
                    .font(.headline)
                    .foregroundColor(.white)
                    .padding()
                    .frame(maxWidth: .infinity)
                    .background(Color.orange)
                    .cornerRadius(10)
...
