...
                        print("Debug - globalPhoneNumber: \(userSettings.globalPhoneNumber)") // Debug globalPhoneNumber
                        AnalyticsManager.shared.trackEvent("existing_user_continue", parameters: [
                            "username": userSettings.globalUserName
                        ])
                        appState.isLoggedIn = true // 更新登入狀態
                    }) {
                        Text("以此帳號登錄")
                            .foregroundColor(.white)
                            .frame(width: 250, height: 45)
                            // 在背景使用漸層
                            .background(
                                LinearGradient(
                                    gradient: Gradient(colors: [Color.cyan, Color.blue]),
...
