...
                                .foregroundColor(.white)
                                .padding()
                                .frame(maxWidth: .infinity)
                                .background(Color.white.opacity(0.1))
                                .cornerRadius(25)
                        }
                        .accessibilityIdentifier("RegisterButton") // <-- 新增這行
                        .padding(.horizontal)
                        .padding(.bottom, 10)
                        .fullScreenCover(isPresented: $isRegistering) {
                            PhoneNumberEntryView(isRegistering: $isRegistering)
                        }
                        
...
