...
                .font(.title2)
                .padding(.horizontal)
                .padding(.vertical)
                .foregroundColor(.black)
                .background(Color.gray.opacity(0.3))
                .cornerRadius(10)
                .accessibilityIdentifier("PasswordTextField") // <- 加上 Identifier
            
            // 將 "忘記密碼？" 改成 Button
            Button(action: {
                // 記錄事件，並切換到 OTP 驗證（密碼重設模式）
                AnalyticsManager.shared.trackEvent("PasswordLogin_ForgotPasswordTapped", parameters: nil)
                showOTPForResetPassword = true
...
                .padding()
                .background(Color.green)
                .foregroundColor(.white)
                .frame(width: 300)
                .cornerRadius(25)
            }
            .accessibilityIdentifier("PasswordLogin_ContinueButton")
            .disabled(isLoggingIn)
            .padding()
        }
        .padding()
        .background(.black)
        .onAppear {
...
