...
            
            // 顯示彈出視窗
            if showWelcomePopup {
                welcomePopupView
            }
        }
        .accessibilityIdentifier("SwipeCardViewIdentifier")
        .edgesIgnoringSafeArea(.all) // 保證圖標能貼近螢幕邊緣
        .fullScreenCover(isPresented: $showPrivacySettings) {
            PrivacySettingsView(isPresented: $showPrivacySettings)
        }
        .fullScreenCover(isPresented: $showMatchTipsPopup) {
            MatchTipsPopupView(isPresented: $showMatchTipsPopup)
...
